creates the testimonials section and fixes overflow in the experiences section

--- a/src/app/sections/experiences/Experiences.module.scss
+++ b/src/app/sections/experiences/Experiences.module.scss
@@ -36,7 +36,6 @@
 
     @media (max-width: 768px) {
         .content {
-            padding: 64px 16px;
 
             .textual {
                 padding: 0px 16px;
